--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+  @import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@300&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing:border-box;
+    list-style: none;
+    max-width: 290px;
+    margin:0 0 0 2px;
+    font-family: 'Sarabun', sans-serif;
+}
+
+li>ul>li{
+    color: grey
+}
